--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "scripts": {
-    "dev": "next dev",
+    "dev": "FIREBASE_AUTH_EMULATOR_HOST=localhost:9099 FIRESTORE_EMULATOR_HOST=localhost:8080 next dev",
     "build": "next build",
     "start": "next start",
     "lint": "next lint"
@@ -22,24 +22,33 @@
     "@mantine/hooks": "^5.10.0",
     "@mantine/modals": "^5.10.0",
     "@mantine/next": "^5.10.0",
+    "@mantine/notifications": "^5.10.1",
     "@mantine/prism": "^5.10.0",
+    "@mantine/utils": "^5.10.0",
     "@next/font": "13.1.1",
     "@types/node": "18.11.18",
     "@types/react": "18.0.26",
     "@types/react-dom": "18.0.10",
+    "axios": "^1.2.2",
     "eslint": "8.31.0",
     "eslint-config-next": "13.1.1",
     "firebase": "^9.15.0",
+    "firebase-admin": "^11.4.1",
     "framer-motion": "^8.4.3",
+    "lodash-es": "^4.17.21",
     "next": "13.1.1",
+    "next-connect": "^0.13.0",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "react-easy-emoji": "^1.8.1",
+    "react-image-crop": "^10.0.9",
     "typescript": "4.9.4",
     "zod": "^3.20.2",
     "zustand": "^4.3.2"
   },
   "devDependencies": {
     "@edqe/eslint-config": "^1.0.1",
+    "@types/lodash-es": "^4.17.6",
     "autoprefixer": "^10.4.13",
     "postcss": "^8.4.21",
     "tailwindcss": "^3.2.4"
