--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
     "lodash-es": "^4.17.21",
     "next": "13.1.1",
     "next-connect": "^0.13.0",
+    "nookies": "^2.5.2",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-easy-emoji": "^1.8.1",
