--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -2,5 +2,8 @@
   "extends": [
     "next/core-web-vitals",
     "@edqe/eslint-config"
-  ]
+  ],
+  "rules": {
+    "import/no-cycle": "off"
+  }
 }
