--- a/firebase.json
+++ b/firebase.json
@@ -16,6 +16,9 @@
     "singleProjectMode": true,
     "storage": {
       "port": 9199
+    },
+    "database": {
+      "port": 9000
     }
   },
   "storage": {
