--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "axios": "^1.2.2",
     "eslint": "8.31.0",
     "eslint-config-next": "13.1.1",
+    "eventemitter3": "^5.0.0",
     "firebase": "^9.15.0",
     "firebase-admin": "^11.4.1",
     "framer-motion": "^8.4.3",
