--- a/package.json
+++ b/package.json
@@ -6,9 +6,12 @@
     "dev": "FIREBASE_AUTH_EMULATOR_HOST=localhost:9099 FIRESTORE_EMULATOR_HOST=localhost:8080 next dev",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint"
+    "lint": "next lint",
+    "emulator:start": "firebase emulators:start --import .firebase-data --export-on-exit .firebase-data"
   },
   "dependencies": {
+    "@dicebear/collection": "^5.1.3",
+    "@dicebear/core": "^5.1.3",
     "@emotion/react": "^11.10.5",
     "@emotion/server": "^11.10.0",
     "@fortawesome/fontawesome-svg-core": "^6.2.1",
