--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "@mantine/prism": "^5.10.0",
     "@mantine/utils": "^5.10.0",
     "@next/font": "13.1.1",
+    "@types/howler": "^2.2.7",
     "@types/node": "18.11.18",
     "@types/react": "18.0.26",
     "@types/react-dom": "18.0.10",
@@ -39,6 +40,7 @@
     "firebase": "^9.15.0",
     "firebase-admin": "^11.4.1",
     "framer-motion": "^8.4.3",
+    "howler": "^2.2.3",
     "lodash-es": "^4.17.21",
     "next": "13.1.1",
     "next-connect": "^0.13.0",
@@ -46,6 +48,7 @@
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-easy-emoji": "^1.8.1",
+    "react-idle-timer": "^5.4.2",
     "react-image-crop": "^10.0.9",
     "typescript": "4.9.4",
     "zod": "^3.20.2",
