--- a/tsconfig.json
+++ b/tsconfig.json
@@ -19,6 +19,7 @@
     "jsx": "preserve",
     "incremental": true,
     "experimentalDecorators": true,
+    "downlevelIteration": true,
     "baseUrl": ".",
     "paths": {
       "@/*": [
