--- a/package.json
+++ b/package.json
@@ -19,16 +19,23 @@
     "@fortawesome/free-regular-svg-icons": "^6.2.1",
     "@fortawesome/free-solid-svg-icons": "^6.2.1",
     "@fortawesome/react-fontawesome": "^0.2.0",
-    "@mantine/core": "^5.10.0",
-    "@mantine/dropzone": "^5.10.0",
+    "@mantine/core": "^5.10.2",
+    "@mantine/dropzone": "^5.10.2",
     "@mantine/form": "^5.10.0",
-    "@mantine/hooks": "^5.10.0",
+    "@mantine/hooks": "^5.10.2",
     "@mantine/modals": "^5.10.0",
     "@mantine/next": "^5.10.0",
     "@mantine/notifications": "^5.10.1",
     "@mantine/prism": "^5.10.0",
+    "@mantine/tiptap": "^5.10.2",
     "@mantine/utils": "^5.10.0",
     "@next/font": "13.1.1",
+    "@tabler/icons": "1.119.0",
+    "@tiptap/core": "^2.0.0-beta.209",
+    "@tiptap/extension-link": "^2.0.0-beta.209",
+    "@tiptap/extension-placeholder": "^2.0.0-beta.209",
+    "@tiptap/react": "^2.0.0-beta.209",
+    "@tiptap/starter-kit": "^2.0.0-beta.209",
     "@types/howler": "^2.2.7",
     "@types/node": "18.11.18",
     "@types/react": "18.0.26",
@@ -45,11 +52,19 @@
     "next": "13.1.1",
     "next-connect": "^0.13.0",
     "nookies": "^2.5.2",
+    "prosemirror-commands": "^1.5.0",
+    "prosemirror-dropcursor": "^1.6.1",
+    "prosemirror-gapcursor": "^1.3.1",
+    "prosemirror-history": "^1.3.0",
+    "prosemirror-keymap": "^1.2.0",
+    "prosemirror-schema-list": "^1.2.2",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-easy-emoji": "^1.8.1",
     "react-idle-timer": "^5.4.2",
     "react-image-crop": "^10.0.9",
+    "react-use": "^17.4.0",
+    "tailwind-scrollbar": "^2.1.0",
     "typescript": "4.9.4",
     "zod": "^3.20.2",
     "zustand": "^4.3.2"
