--- a/firebase.json
+++ b/firebase.json
@@ -23,5 +23,8 @@
   },
   "storage": {
     "rules": "firebase/storage/storage.rules"
+  },
+  "database": {
+    "rules": "firebase/database/rules.json"
   }
 }
