--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "@next/font": "13.1.1",
     "@tabler/icons": "1.119.0",
     "@tiptap/core": "^2.0.0-beta.209",
+    "@tiptap/extension-character-count": "^2.0.0-beta.209",
     "@tiptap/extension-code-block-lowlight": "^2.0.0-beta.209",
     "@tiptap/extension-link": "^2.0.0-beta.209",
     "@tiptap/extension-placeholder": "^2.0.0-beta.209",
