--- a/package.json
+++ b/package.json
@@ -56,6 +56,15 @@
     "lodash-es": "^4.17.21",
     "lowlight": "^2.8.0",
     "luxon": "^3.2.1",
+    "metascraper": "^5.33.7",
+    "metascraper-author": "^5.33.7",
+    "metascraper-description": "^5.33.7",
+    "metascraper-image": "^5.33.7",
+    "metascraper-logo-favicon": "^5.33.7",
+    "metascraper-spotify": "^5.33.7",
+    "metascraper-title": "^5.33.7",
+    "metascraper-url": "^5.33.7",
+    "metascraper-youtube": "^5.33.7",
     "next": "13.1.1",
     "next-connect": "^0.13.0",
     "nookies": "^2.5.2",
@@ -72,6 +81,7 @@
     "react-idle-timer": "^5.4.2",
     "react-image-crop": "^10.0.9",
     "react-use": "^17.4.0",
+    "react-youtube": "^10.1.0",
     "tailwind-scrollbar": "^2.1.0",
     "typescript": "4.9.4",
     "zod": "^3.20.2",
