--- a/package.json
+++ b/package.json
@@ -75,6 +75,7 @@
     "prosemirror-keymap": "^1.2.0",
     "prosemirror-schema-list": "^1.2.2",
     "prosemirror-state": "^1.4.2",
+    "random-words": "^1.2.1",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-easy-emoji": "^1.8.1",
