--- a/package.json
+++ b/package.json
@@ -43,6 +43,8 @@
     "@types/node": "18.11.18",
     "@types/react": "18.0.26",
     "@types/react-dom": "18.0.10",
+    "@videosdk.live/js-sdk": "^0.0.59",
+    "@videosdk.live/react-sdk": "^0.1.62",
     "axios": "^1.2.2",
     "eslint": "8.31.0",
     "eslint-config-next": "13.1.1",
@@ -53,6 +55,7 @@
     "hast-util-to-html": "^8.0.4",
     "highlight.js": "^11.7.0",
     "howler": "^2.2.3",
+    "jsonwebtoken": "^9.0.0",
     "lodash-es": "^4.17.21",
     "lowlight": "^2.8.0",
     "luxon": "^3.2.1",
@@ -90,6 +93,7 @@
   },
   "devDependencies": {
     "@edqe/eslint-config": "^1.0.1",
+    "@types/jsonwebtoken": "^9.0.1",
     "@types/lodash-es": "^4.17.6",
     "@types/luxon": "^3.2.0",
     "autoprefixer": "^10.4.13",
