--- a/package.json
+++ b/package.json
@@ -63,9 +63,11 @@
     "metascraper-author": "^5.33.7",
     "metascraper-description": "^5.33.7",
     "metascraper-image": "^5.33.7",
+    "metascraper-instagram": "^5.43.4",
     "metascraper-logo-favicon": "^5.33.7",
     "metascraper-spotify": "^5.33.7",
     "metascraper-title": "^5.33.7",
+    "metascraper-twitter": "^5.43.4",
     "metascraper-url": "^5.33.7",
     "metascraper-youtube": "^5.33.7",
     "next": "13.1.1",
